# KiwiBaby-AMD-Hackathon

./: .gitignore  README.md  monitor.py  package-lock.json  package.json
backend/: .env  .vercelignore  AMD.py  BossArrival.bat  GhostLaunch.vbs  mydatabase.db  ngrok.yml.txt  pyproject.toml  requirements.txt  reset_db.py  test_env.py  testkey.py
backend/api/: index.py
backend/app/: auth.py  config.py  database.py  dependencies.py  llm_client.py  main.py  memory.py  models.py  router.py  schemas.py  utils.py
backend/app/core/: jwt_handler.py
backend/app/routers/: auth.py  generate.py  history.py
backend/app/services/: coverage.py  generator.py
backend/chroma_db/: chroma.sqlite3
cli/: package-lock.json  package.json
core/: ai_testcase_agent.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx  styles.css
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
