[project]
name = "kiwibaby-backend"
version = "0.1.0"
description = "KiwiBaby AI Automation Testing Agent Framework"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "chromadb",
    "google-generativeai",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings"
]